<resources>
    <string name="app_name">RentalRoomManagement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Calculate monthly money rent-->
    <string name="overview">Overview</string>
    <string name="current_electric_number">Current Electric Number:</string>
    <string name="previous_electric_number">Previous Electric Number:</string>
    <string name="electric_usage">Electric usage:</string>
    <string name="room_number">Room Number:</string>
    <string name="total_money">Total:</string>
    <string name="house_name">House:</string>
    <string name="add">Add</string>
    <string name="other_cost">Other cost:</string>
    <string name="note">Note:</string>
    <!-- Common label -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <!-- List room's rent-->
    <string name="no_data">You haven\'t has data yet</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>

    <!-- Message error-->
    <string name="MSG001">You need to choose room</string>
    <string name="MSG002">Please enter electric number</string>
    <string name="MSG003">Do you want to send message to this room ?</string>
    <string name="MSG004">Are you sure you want to delete this ?</string>
    <string name="MSG005">Please enter number only</string>
    <string name="MSG006">Please enter number bigger than previous electric number </string>
    <string name="MSG007">Please input required field </string>
    <!-- Message total money have to pay-->
    <string name="msg_rent_money">Tiền nhà tháng này của %s là %d</string>

    <!-- Profile Information -->
    <string name="add_profile">Add profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="full_name">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="hometown">Home town</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_calculate_rent_money">CalculateRentMoney</string>
</resources>
