<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculateRentMoney"
    android:orientation="vertical"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/room_number"
            />
        <Spinner
            android:id="@+id/spnRoomNumber"
            android:entries="@array/arr_room_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/previous_electric_number"
            />
        <TextView
            android:id="@+id/tvPreviousElectricNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/current_electric_number"
            />
        <EditText
            android:id="@+id/edtCurrentElectricNumber"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/other_cost"
            />
        <EditText
            android:id="@+id/edtOtherCost"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/note"
            />
        <EditText
            android:id="@+id/edtNote"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:gravity="top|left"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="textEnd"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/total_money"
            />
        <TextView
            android:id="@+id/tvTotalMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textAllCaps="false"
            android:text="@string/add"
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:textAllCaps="false"
            android:text="@string/back"
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>